# PRISM

./: .env.example  .gitignore  LICENSE  MIRROR.md  README.md  config.py  main.py  prism_inside_client.py  pyproject.toml  requirements.txt  setup.sh
data/: episode_store.py  experience_log.py  knowledge_graph.py  memory_validator.py  mirror_context.example.md  schemas.py  semantic_store.py
data/general/: common_knowledge.jsonl  knowledge_expanded.jsonl  (+3 more)
evaluation/: eval_runner.py  test_suite.py
logs/: nightly_run_20260328_193447.json  nightly_run_20260331_235952.json  nightly_run_20260401_011225.json  nightly_run_20260401_091120.json  nightly_run_20260401_223510.json
memory_adapter/: gating.py  memory_state.py  titans_adapter.py  train_adapter.py
model/: expert_router.py  inference.py  loader.py  quantize.py
scripts/: benchmark.py  cortex_loop_apply.py  cortex_loop_scan.py  download_model.py  merge_kg_entities.py  metrics_dashboard.py  mirror_autopilot.py  mirror_bootstrap.py  run_training.py  seed_knowledge_graph.py
server/: chat.py  compaction_service.py  feedback.py  frustration_detector.py  idle_monitor.py  mirror_hook.py  mirror_oracle.py  routes.py  session_history.py  status.py
tests/: test_adapter.py  test_contradiction_engine.py  test_dream_consolidation.py  test_feedback.py  test_inference.py  test_training.py
training/: active_recall.py  contradiction_engine.py  curriculum.py  data_builder.py  dream_consolidation.py  lora_trainer.py  moe_lora_trainer.py  scheduler.py
utils/: anthropic_client.py  mirror_context.py  text_similarity.py
